<resources>
    <string name="app_name">MrGarden</string>

    <string name="SignUpFirst_name">SignUpFirst</string>

    <string name="action_settings">Settings</string>
    <string name="button_login">登录</string>
    <string name="button_signup">注册</string>
    <string name="button_confirm_login">确认登录</string>
    <string name="button_cancel_login">取消登录</string>
    <string name="button_confirm_signup">确认注册</string>
    <string name="button_cancel_signup">取消注册</string>
    <string name="edit_username">用户名</string>
    <string name="edit_password">密码</string>
    <string name="edit_password_again">再次输入密码</string>
    <string name="edit_phone">手机</string>
    <string name="login">登录</string>
    <string name="signup">注册账号</string>
    <string name="potname">花盆名称</string>
    <string name="next">下一步</string>
    <string name="introduction_msg">\t\t本系统能够远程实时检测植物生长环境数据，并能高效分析处理给予用户种植改进建议，同时智能的对不同的植物进行定制化的自动浇水护养。通过物联网技术，用户可以随时随地的用智能手机和web浏览器对植物种植系统进行远程多端控制，如远程浇水，实时查看，自动化操作订制修改等操作。并且使用者还可以根据反馈建议实时数据的变化来更好的调整种植系统，从而实现智能种植的理念。\n\n
\t\t为了保证用户数据和种植系统的安全性，每位用户的每次操作信息都将完整记入历史记录供未来查看，每次登陆注册地理位置ip信息也同样可以在自己的历史记录中进行查看，保证用户安全。并且全站全部的网络通信都以采用HTTPS加密，配合linux良好的安全性稳定性以提供最佳的用户体验。
</string>
    <string name="login_only_can_input">qwertyuioplkjhgfdsazxcvbnmQWERTYUIOPLKJHGFDSAZXCVBNM1234567890</string>
</resources>
