<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:text="@string/signup"
        android:gravity="center"
        android:textSize="25dp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:singleLine="true"
        android:textSize="30dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/edit_username"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="#55FFFFFF"
        android:textCursorDrawable="@null"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />

    <EditText
        android:id="@+id/pass1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:hint="@string/edit_password"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="#55FFFFFF"
        android:textCursorDrawable="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />

    <EditText
        android:id="@+id/pass2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:hint="@string/edit_password_again"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="#55FFFFFF"
        android:textCursorDrawable="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />

    <EditText
        android:id="@+id/phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@android:color/transparent"
        android:hint="@string/edit_phone"
        android:inputType="phone"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:textColorHint="#55FFFFFF"
        android:textCursorDrawable="@null"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white" />


</merge>